--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@types/ffmpeg": "^1.0.7",
+    "@types/multer": "^1.4.11",
+    "ffmpeg": "^0.0.4",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vertx": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/node": "^20",
